--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
 		{ title: "В бой идут одни 'старики' (1973)", rating: 8, mood: 6, taugh: 4, interest: 5, adventure: 7, fantast: 5, horror: 1, sense: 7, image: "image58.jpg" },
 		{ title: "Обыкновенное чудо (1978)", rating: 8, mood: 8, taugh: 1, interest: 6, adventure: 3, fantast: 6, horror: 1, sense: 5, image: "image59.jpg" },
 		{ title: "Служебный роман (1977)", rating: 9, mood: 9, taugh: 1, interest: 5, adventure: 3, fantast: 4, horror: 1, sense: 6, image: "image60.jpg" },
-		{ title: "Тот самый Мюнхгаузен (1979)", rating: 8, mood: 9, taugh: 1, interest: 4, adventure: 7, fantast: 9, horror: 1, sense: 5, image: "image.61jpg" },
+		{ title: "Тот самый Мюнхгаузен (1979)", rating: 8, mood: 9, taugh: 1, interest: 4, adventure: 7, fantast: 9, horror: 1, sense: 5, image: "image61.jpg" },
 		{ title: "Самая обаятельная и привлекательная (1975)", rating: 8, mood: 9, taugh: 1, interest: 3, adventure: 4, fantast: 4, horror: 1, sense: 4, image: "image62.jpg" },
 		{ title: "Телохранитель киллера (2017)", rating: 7, mood: 7, taugh: 5, interest: 5, adventure: 8, fantast: 4, horror: 1, sense: 3, image: "image63.jpg" },
 		{ title: "Игра (1997)", rating: 7, mood: 6, taugh: 6, interest: 5, adventure: 7, fantast: 5, horror: 2, sense: 5, image: "image64.jpg" },
 		{ title: "Мотылек (1973)", rating: 8, mood: 5, taugh: 5, interest: 6, adventure: 6, fantast: 6, horror: 2, sense: 7, image: "image65.jpg" },
 		{ title: "Абсолютная власть (1997)", rating: 7, mood: 6, taugh: 3, interest: 4, adventure: 6, fantast: 5, horror: 1, sense: 6, image: "image66.jpg" },
 		{ title: "Я – легенда (2007)", rating: 8, mood: 5, taugh: 4, interest: 6, adventure: 8, fantast: 8, horror: 5, sense: 7, image: "image67.jpg" },
-		{ title: "Время (2011)", rating: 7, mood: 6, taugh: 2, interest: 5, adventure: 7, fantast: 7, horror: 1, sense: 6, image: "image.68jpg" },
+		{ title: "Время (2011)", rating: 7, mood: 6, taugh: 2, interest: 5, adventure: 7, fantast: 7, horror: 1, sense: 6, image: "image68.jpg" },
 		{ title: "Спасатели Малибу (2017)", rating: 5, mood: 6, taugh: 3, interest: 5, adventure: 6, fantast: 4, horror: 1, sense: 2, image: "image69.jpg" },
 		{ title: "Зеленая книга (2018)", rating: 9, mood: 8, taugh: 2, interest: 5, adventure: 4, fantast: 5, horror: 1, sense: 8, image: "image71.jpg" },
 		{ title: "Не смотрите наверх (2021)", rating: 7, mood: 6, taugh: 4, interest: 5, adventure: 4, fantast: 5, horror: 2, sense: 7, image: "image72.jpg" },
@@ -141,7 +141,7 @@
 		{ title: "Маска (1994)", rating: 8, mood: 9, taugh: 1, interest: 4, adventure: 7, fantast: 6, horror: 1, sense: 3, image: "image78.jpg" },
 		{ title: "Сияние (1980)", rating: 8, mood: 5, taugh: 5, interest: 7, adventure: 6, fantast: 8, horror: 9, sense: 8, image: "image79.jpg" },
 		{ title: "Нечто (1982)", rating: 8, mood: 4, taugh: 8, interest: 6, adventure: 8, fantast: 8, horror: 10, sense: 7, image: "image80.jpg" },
-		{ title: "Шоу Трумана (1998)", rating: 8, mood: 8, taugh: 1, interest: 5, adventure: 4, fantast: 7, horror: 1, sense: 9, image: "imag81.jpg" },
+		{ title: "Шоу Трумана (1998)", rating: 8, mood: 8, taugh: 1, interest: 5, adventure: 4, fantast: 7, horror: 1, sense: 9, image: "image81.jpg" },
 		{ title: "Кабельщик (2001)", rating: 6, mood: 5, taugh: 2, interest: 4, adventure: 5, fantast: 4, horror: 2, sense: 3, image: "image82.jpg" },
 		{ title: "Великий Гетсби (2013)", rating: 7, mood: 7, taugh: 2, interest: 6, adventure: 4, fantast: 6, horror: 1, sense: 8, image: "image83.jpg" },
 		{ title: "Код Да Винчи (2006)", rating: 7, mood: 6, taugh: 3, interest: 5, adventure: 7, fantast: 6, horror: 1, sense: 7, image: "image84.jpg" },
